--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spellbook",
   "version": "0.1.0",
   "private": true,
+  "main": "./src/index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -19,8 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
