--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "main": "./src/index.tsx",
   "dependencies": {
+    "@react-three/drei": "^8.19.5",
+    "@react-three/fiber": "^7.0.26",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
+    "@types/prismjs": "^1.26.0",
+    "@types/three": "^0.139.0",
+    "babel-env": "^2.4.1",
+    "prismjs": "^1.27.0",
+    "react-scripts": "4.0.3",
+    "three": "^0.139.0",
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.1.2"
+  },
+  "peerDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
