--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/html2canvas": "^1.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/prismjs": "^1.26.0",
     "babel-env": "^2.4.1",
+    "html2canvas": "^1.4.1",
     "prismjs": "^1.27.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
