--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "web-vitals": "^1.1.2"
   },
   "peerDependencies": {
+    "@react-three/cannon": "^5.1.0",
     "@react-three/drei": "^8.19.5",
     "@react-three/fiber": "^7.0.26",
+    "@react-three/xr": "^3.4.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/three": "^0.139.0",
