--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "private": true,
   "main": "./src/index.tsx",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/html2canvas": "^1.0.0",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.37",
-    "@types/prismjs": "^1.26.0",
-    "babel-env": "^2.4.1",
-    "html2canvas": "^1.4.1",
-    "prismjs": "^1.27.0",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@types/html2canvas": "1.0.0",
+    "@types/jest": "26.0.24",
+    "@types/node": "12.20.37",
+    "@types/prismjs": "1.26.0",
+    "babel-env": "2.4.1",
+    "html2canvas": "1.4.1",
+    "prismjs": "1.27.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "typescript": "4.5.2",
+    "web-vitals": "1.1.2"
   },
   "peerDependencies": {
-    "@react-three/cannon": "^5.1.0",
-    "@react-three/drei": "^8.19.5",
-    "@react-three/fiber": "^7.0.26",
-    "@react-three/xr": "^3.4.0",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/three": "^0.139.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "^0.139.0"
+    "@react-three/cannon": "5.1.0",
+    "@react-three/drei": "8.19.5",
+    "@react-three/fiber": "7.0.26",
+    "@react-three/xr": "3.4.0",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
+    "@types/three": "0.139.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "three": "0.139.0"
   },
   "scripts": {
     "start": "react-scripts start",
